# sovereign

./: .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.solana  LICENSE  README.md  bun.lockb  docker-compose.yml  package.json  tsconfig.json  turbo.json
agents/: README.md  package.json
backend/: .gitignore  README.md  bun.lockb  package.json  solana.ts  start.ts
backend/bootstrap/: characters.json
backend/dbschema/: agents.esdl  common.esdl  solana.esdl  twitter.esdl
backend/idl/: programs.json
backend/prisma/: schema.prisma
backend/src/: bootstrap.ts  common.ts  cry.ts  events.ts
circuits/: README.md  bun.lockb  package.json
circuits/src/: bounty.circom  bounty.r1cs  bounty_0002.zkey  generate_keys.sh  vk_bounty.json  vk_to_rs.js
client/: .env.example  README.md  bun.lockb  manifest.webmanifest  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
client/src/: app.css  app.html  service-worker.ts
programs/: Anchor.toml  Cargo.toml  README.md  bun.lockb  package.json
programs/programs/programs/: Cargo.toml
programs/programs/programs/src/: constant.rs  error.rs  lib.rs  verifying_key.rs
programs/programs/programs/src/instructions/: broker.rs  game.rs  init_game.rs  init_nation.rs  init_offer.rs  init_wallet.rs  mint_citizen.rs  mod.rs  nation.rs  player.rs  tokens.rs  upgrade_citizen.rs  world.rs
programs/programs/programs/src/state/: bounty.rs  game.rs  mod.rs  nation.rs  player.rs  pool.rs  wallet.rs
simulator/: .gitignore  bun.lockb  package.json
simulator/src/: sim01.ts  (+2 more)
validator/: README.md  bun.lockb  package.json
(+103 files in other folders)
