[package]
name = "programs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "programs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["event-cpi"]}
anchor-spl = "0.30.1"
mpl-core = {version = "0.8.0", features = ["anchor"]}
strum = "0.26"
strum_macros = "0.26"